removed anonymous settings

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,4 +1,4 @@
-\documentclass[sigplan, nonacm, anonymous, screen, natbib=false]{acmart}
+\documentclass[sigplan, nonacm, screen, natbib=false]{acmart}
 \RequirePackage[datamodel=acmdatamodel,style=acmnumeric]{biblatex}
 \addbibresource{bibliography.bib}
 
