added 2to3 citation

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,3 +1,9 @@
+@online{2to3,
+  organization = {Python Software Foundation},
+  title        = {2to3 — Automated Python 2 to 3 code translation},
+  url          = {https://docs.python.org/3/library/2to3.html}
+}
+
 @article{Aggarwal,
   author = {Aggarwal, Karan and Salameh, Mohammad and Hindle, Abram},
   year   = {2015},
