--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,7 +1,7 @@
-@online{2to3,
-  organization = {Python Software Foundation},
-  title        = {2to3 — Automated Python 2 to 3 code translation},
-  url          = {https://docs.python.org/3/library/2to3.html}
+@manual{2to3,
+  author = {Python Software Foundation},
+  title  = {2to3 — Automated Python 2 to 3 code translation},
+  url    = {https://docs.python.org/3/library/2to3.html}
 }
 
 @article{Aggarwal,
