--- a/paper/Fixers.tex
+++ b/paper/Fixers.tex
@@ -1,4 +1,9 @@
 \section{Fixers}
-\begin{tabular*}{|c|c|c|c|}
-    1 & 4 & 5 & 6
-\end{tabular*}
+\label{appendix:Fixers}
+\begin{table}
+\begin{tabular}[center]{|c|c|c|c|}
+    Name & Description & Example Input & Example Output \\
+    \hline
+    4 & 4 & 6 & u
+\end{tabular}
+\end{table}
