--- a/paper/Literature Review.tex
+++ b/paper/Literature Review.tex
@@ -1,4 +1,8 @@
 \section{Literature Review}
 
 \subsection{Python 2 vs. 3}
-In December 2008, Python version 3.0 was released.
+The core of the Python language is a program known as the interpreter, which reads Python source code from a text file or other input source and executes the code as it reads it. A 'version' of the Python language is simply a version of the interpreter, and each new version of the interpreter includes updates that allow the interpreter to read new code syntaxes, as well as other upgrades such as performance boosts. Usually, each new interpreter version is backwards compatible, meaning code that executed without issue in the previous version also executes without issue and with the same behavior on the new version \autocite{Malloy}. Backwards compatibility is highly valued due to the high usage of the language, and the Python Software Foundation (PSF), the organization which manages the development of the Python language, attempts to maintain backwards compatibility as much as reasonably possible.
+
+However, in December 2008, Python version 3.0 was released. According to the PSF, Python 3.0 was the first ever “intentionally backwards incompatible” release of Python. Python 3.0 included numerous syntax changes that meant that the Python 3.0 interpreter was unable to run most code written in Python 2, since it could not recognize the old syntax. According to Guido van Rossum, the creator of Python and head of its development at the time, the purpose of such wide-reaching changes was, “fixing well-known annoyances and warts, and removing a lot of old cruft” \autocite{vanRossum}.
+
+To assist in the massive task of converting entire codebases from Python 2 to Python 3, a program known as 2to3 was created by the PSF \autocite{2to3}. 2to3 is a transpiler --- a program that translates one programming language to another --- that converts Python 2 code to Python 3 code. However, 2to3 did not prove as popular as hoped, and the prevailing conversion strategy eventually became to use tools to delicately make a single codebase that could run under Python 2 and Python 3 \autocite{Malloy}. The overall transition from Python 2 to Python 3 has also been rocky, as many Python developers even a decade after the transition began are still attempting to maintain the balance between Python 2 and 3 \autocite{Malloy}. However, all versions of Python 2 have lost support from the PSF, meaning they will not receive any feature updates or, more critically, any security updates, and all focus is now on maintaining Python 3. Thus, the importance of converting the remaining Python 2 codebases is great.
