--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -129,6 +129,12 @@
   series    = {NIPS'20}
 }
 
+@online{vanRossum,
+  author = {van Rossum, Guido},
+  title  = {What's New In Python 3.0},
+  url    = {https://docs.python.org/3/whatsnew/3.0.html}
+}
+
 @article{Wang,
   author     = {Wang, Bo and Kolluri, Aashish and Nikoli\'{c}, Ivica and Baluta, Teodora and Saxena, Prateek},
   title      = {User-Customizable Transpilation of Scripting Languages},
