--- a/paper/Literature Review.tex
+++ b/paper/Literature Review.tex
@@ -8,14 +8,14 @@ However, in December 2008, Python version 3.0 was released. According to the PSF
 To assist in the massive task of converting entire codebases from Python 2 to Python 3, a program known as 2to3 was created by the PSF \autocite{2to3}. 2to3 is a \textit{transpiler} --- a program that translates one programming language to another --- that converts Python 2 code to Python 3 code. However, 2to3 did not prove as popular as hoped, and the prevailing conversion strategy eventually became to use tools to delicately make a single codebase that could run under Python 2 and Python 3 \autocite{Malloy}. The overall transition from Python 2 to Python 3 has also been rocky, as many Python developers even a decade after the transition began are still attempting to maintain the balance between Python 2 and 3 \autocite{Malloy}. However, all versions of Python 2 have lost support from the PSF, meaning they will not receive any feature updates or, more critically, any security updates, and all focus is now on maintaining Python 3. Thus, the importance of converting the remaining Python 2 codebases is great.
 
 \subsection{Code Translation}
-The problem of code translation has been approached in a number of different ways. One way has been to use techniques from the field of natural language machine translation. One 2014 study used the technique of statistical machine translation --- translating language based on the probability that a given translation is a correct translation of the original language --- to translate from the C\# programming language to the Java programming language. According to them, 68\% of the code produced by the translator was 'semantically equivalent,' meaning that the translated code was essentially the same as the original code.
+The problem of code translation has been approached in a number of different ways. One way has been to use techniques from the field of natural language machine translation. One 2014 study used the technique of statistical machine translation --- translating language based on the probability that a given translation is a correct translation of the original language --- to translate from the C\# programming language to the Java programming language \autocite{Karaivanov}. According to them, 68\% of the code produced by the translator was 'semantically equivalent,' meaning that the translated code was essentially the same as the original code.
 
-Python 2 to 3 translation specifically has not been a widely researched topic within the field of code translation research. However, the one study that has been done on the topic also used the technique of statistical machine translation to translate from Python 2 to Python 3. Researchers from the University of Alberta created the translator and evaluated its effectiveness using a metric called BLEU, which is a metric used by natural language machine translation researchers that is based on the premise that if a given translation is highly similar to known 'correct' translations, then the translation is likely to be correct.
+Python 2 to 3 translation specifically has not been a widely researched topic within the field of code translation research. However, the one study that has been done on the topic also used the technique of statistical machine translation to translate from Python 2 to Python 3. Researchers from the University of Alberta created the translator and evaluated its effectiveness using a metric called BLEU, which is a metric used by natural language machine translation researchers that is based on the premise that if a given translation is highly similar to known 'correct' translations, then the translation is likely to be correct \autocite{Aggarwal}.
 
-However, a 2020 research paper from Facebook Research (now Meta Research) that used neural machine translation --- the use of neural networks to translate languages --- to translate between various programming languages, criticized the use of BLEU as a metric for evaluating the effectiveness of code translators, given that a translation that is missing a 'word' or even a single character may still be highly similar to a correct translation, but still give the wrong result or fail to run at all due to the need for code to be highly precise in a much more extreme way than natural languages do. They measured effectiveness by creating their own metric known as computational accuracy, in which a translation that gives the same output when executed as the original code does is deemed successful. Their translator had widely varying success rates depending on the source and target language used. The most successful pairing source and target languages was Java to C++, and the least successful one was Python to Java.
+However, a 2020 research paper from Facebook Research (now Meta Research) that used neural machine translation --- the use of neural networks to translate languages --- to translate between various programming languages, criticized the use of BLEU as a metric for evaluating the effectiveness of code translators, given that a translation that is missing a 'word' or even a single character may still be highly similar to a correct translation, but still give the wrong result or fail to run at all due to the need for code to be highly precise in a much more extreme way than natural languages do \autocite{Roziere}. They measured effectiveness by creating their own metric known as computational accuracy, in which a translation that gives the same output when executed as the original code does is deemed successful. Their translator had widely varying success rates depending on the source and target language used. The most successful pairing source and target languages was Java to C++, and the least successful one was Python to Java \autocite{Roziere}.
 
 \subsection{Formal Verification}
-Since software of more than trivial complexity started being written, there has been a need for software to be verified to be free of bugs. One of the first models proposed for such verification was Hoare logic, first proposed in 1969 by the British mathematician C.A.R. Hoare. The basic statement in Hoare logic is the Hoare triple, which consists of a command and a precondition and postcondition. If the precondition is met before a command is run, then the command is run, and afterwards the postcondition is met, then the command is considered 'correct' when run with the specified conditions. Hoare logic has been highly influential, and has spawned the field of \textit{formal verification} --- the verification that software meets certain defined specifications.
+Since software of more than trivial complexity started being written, there has been a need for software to be verified to be free of bugs. One of the first models proposed for such verification was Hoare logic, first proposed in 1969 by the British mathematician C.A.R. Hoare. The basic statement in Hoare logic is the Hoare triple, which consists of a command and a precondition and postcondition. If the precondition is met before a command is run, then the command is run, and afterwards the postcondition is met, then the command is considered 'correct' when run with the specified conditions \autocite{Hoare}. Hoare logic has been highly influential, and has spawned the field of \textit{formal verification} --- the verification that software meets certain defined specifications.
 
 Formal verification has now developed extensively, and is widely used, especially in safety-critical industries such as aviation, where it is imperative that software that be verified to run according to defined specifications. 
 
