--- a/paper/Literature Review.tex
+++ b/paper/Literature Review.tex
@@ -1,7 +1,7 @@
 \section{Literature Review}
 
 \subsection{Python 2 vs. 3}
-The core of the Python language is a program known as the interpreter, which reads Python source code from a text file or other input source and executes the code as it reads it. A 'version' of the Python language is simply a version of the interpreter, and each new version of the interpreter includes updates that allow the interpreter to read new code syntaxes, as well as other upgrades such as performance boosts. Usually, each new interpreter version is \textit{backwards compatible}, meaning code that executed without issue in the previous version also executes without issue and with the same behavior on the new version \autocite{Malloy}. Backwards compatibility is highly valued due to the high usage of the language, and the Python Software Foundation (PSF), the organization which manages the development of the Python language, attempts to maintain backwards compatibility as much as reasonably possible.
+The core of the Python language is a program known as the interpreter, which reads Python source code from a text file or other input source and executes the code as it reads it. A 'version' of the Python language is simply a version of the interpreter, and each new version of the interpreter includes updates that allow the interpreter to read new code syntaxes, as well as other upgrades such as performance boosts. Usually, each new interpreter version is \textit{backwards compatible}, meaning code that executed without issue in the previous version also executes without issue and with the same behavior on the new version \autocite{Malloy}. Backwards compatibility is highly valued due to the high usage of the language, and the PSF usually attempts to maintain backwards compatibility as much as reasonably possible.
 
 However, in December 2008, Python version 3.0 was released. According to the PSF, Python 3.0 was the first ever “intentionally backwards incompatible” release of Python. Python 3.0 included numerous syntax changes that meant that the Python 3.0 interpreter was unable to run most code written in Python 2, since it could not recognize the old syntax. According to Guido van Rossum, the creator of Python and head of its development at the time, the purpose of such wide-reaching changes was, “fixing well-known annoyances and warts, and removing a lot of old cruft” \autocite{vanRossum}.
 
@@ -15,10 +15,8 @@ Python 2 to 3 translation specifically has not been a widely researched topic wi
 However, a 2020 research paper from Facebook Research (now Meta Research) that used neural machine translation --- the use of neural networks to translate languages --- to translate between various programming languages, criticized the use of BLEU as a metric for evaluating the effectiveness of code translators, given that a translation that is missing a 'word' or even a single character may still be highly similar to a correct translation, but still give the wrong result or fail to run at all due to the need for code to be highly precise in a much more extreme way than natural languages do \autocite{Roziere}. They measured effectiveness by creating their own metric known as computational accuracy, in which a translation that gives the same output when executed as the original code does is deemed successful. Their translator had widely varying success rates depending on the source and target language used. The most successful pairing source and target languages was Java to C++, and the least successful one was Python to Java \autocite{Roziere}.
 
 \subsection{Formal Verification}
-Since software of more than trivial complexity started being written, there has been a need for software to be verified to be free of bugs. One of the first models proposed for such verification was Hoare logic, first proposed in 1969 by the British mathematician C.A.R. Hoare. The basic statement in Hoare logic is the Hoare triple, which consists of a command and a precondition and postcondition. If the precondition is met before a command is run, then the command is run, and afterwards the postcondition is met, then the command is considered 'correct' when run with the specified conditions \autocite{Hoare}. Hoare logic has been highly influential, and has spawned the field of \textit{formal verification} --- the verification that software meets certain defined specifications.
+Since software of more than trivial complexity started being written, there has been a need for software to be verified to be free of bugs. One of the first models proposed for such verification was Hoare logic, first proposed in 1969 by the British mathematician C.A.R. Hoare. The basic statement in Hoare logic is the Hoare triple, which consists of a command and a precondition and postcondition. If the precondition is met before a command is run, then the command is run, and afterwards the postcondition is met, then the command is considered 'correct' when run with the specified conditions \autocite{Hoare}. Hoare logic has been highly influential, and has spawned the field of formal verification.
 
-Formal verification has now developed extensively, and is widely used, especially in safety-critical industries such as aviation, where it is imperative that software that be verified to run according to defined specifications. 
+Although formal verification is most common in safety-critical industries such as transportation and other industries where verification of software is critical, formal verification has also been applied in other fields, such as compilers. A \textit{compiler} is a type of code translator that translates a programming language into machine code --- code that a computer recognizes and can run. Researchers from Inria, a French government-supported computer science research institute, created CompCert, a formally verified compiler for the C programming language \autocite{Leroy}. Compiling programming languages to machine code is a complex task that can result in notoriously difficult to catch bugs that only occur in certain conditions, so the goal of the CompCert project is to verify that all code is compiled correctly with no bugs. CompCert was able to achieve similar performance to mainstream C compilers despite needing more computations than a normal compiler would need due to the need to verify the correctness of compilations, showing that formally verified compilers are feasible to implement.
 
-Formal verification has also been applied to less safety-critical applications, such as compilers. A \textit{compiler} is a type of code translator that translates a programming language into machine code --- code that a computer recognizes and can run. Researchers from Inria, a French government-supported computer science research institute, created CompCert, a formally verified compiler for the C programming language. Compiling programming languages to machine code is a complex task that can result in notoriously difficult to catch bugs that only occur in certain conditions, so the goal of the CompCert project is to verify that all code is compiled correctly with no bugs. CompCert was able to achieve similar performance to mainstream C compilers despite needing more computations than a normal compiler would need due to the need to verify the correctness of compilations, showing that formally verified compilers are feasible to implement.
-
-The goal of this research project is to create a formally verified transpiler, Transpyler, that can translate Python 2 code to Python 3 code, to test the feasibility of formal verification of transpilers for languages such as Python and to test the effectiveness of a formally verified transpiler.
+The next stage after research into formally verified compilers is research into formally verified transpilers, of which research is currently scant. A Python 2 to Python 3 transpiler was chosen as the research target due to the overall similarity of both versions, despite their large differences, making implementation easier. Such research will hopefully lead to even more research into the application of formally verified transpilers and of formally verified software in general, and hopefully ultimately result in the greater proliferation of formally verified software that can be verified to be free of bugs.
