--- a/paper/main.tex
+++ b/paper/main.tex
@@ -10,9 +10,10 @@
 \input{Introduction}
 \input{Literature Review}
 \input{Methodology}
+\input{Results}
 
 \printbibliography
 
-%\appendix
-%\include{Fixers}
+\appendix
+\include{Data}
 \end{document}
