--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -1,10 +1,26 @@
 \section{Data}
 \label{appendix:Data}
 \subsection{Computational Accuracy}
-\begin{table}
-\begin{tabular}[center]{|c|c|c|c|c|}
-    Test & Python 2 Output & 2to3 Translation & 2to3 Translation Output & 2to3 Translation Correct \\
+\begin{table}[ht]
+    \centering
+    \begin{tabular}{|l|l|l|l|}
     \hline
-    4 & 4 & 6 & t
-\end{tabular}
+    Test                                  & 2to3 Translation                      & Python 2 Output                               & 2to3 Translation Output                       \\ \hline
+    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1, 1+1, 1+1+1)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
+    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1, 2)                          | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | \\ \hline
+    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
+    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1); print()                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| & \lstinline[language=Python, style=pythonstyle]|b'1\n\n'| \\ \hline
+    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(); print(1);                   | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| & \lstinline[language=Python, style=pythonstyle]|b'\n1\n'| \\ \hline
+    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,   1+1,   1+1+1)             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
+    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '                             | \\ \hline
+    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ')                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'               | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ \hline
+    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1, end=' ')                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'1 '                                 | \\ \hline
+    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1, 2, 3))                     | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'         | \\ \hline
+    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'()\n'                | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
+    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print('')                            | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
+    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'             | \\ \hline
+    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ', file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2'                                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '                               | \\ \hline
+    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | & \lstinline[language=Python, style=pythonstyle]|b'2\n'                 | \\ \hline
+    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | & \lstinline[language=Python, style=pythonstyle]|b'\n'                  | \\ \hline
+    \end{tabular}
 \end{table}
